--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'stormboard';
-  src:  url('fonts/stormboard.eot?b9kp2a');
-  src:  url('fonts/stormboard.eot?b9kp2a#iefix') format('embedded-opentype'),
-    url('fonts/stormboard.ttf?b9kp2a') format('truetype'),
-    url('fonts/stormboard.woff?b9kp2a') format('woff'),
-    url('fonts/stormboard.svg?b9kp2a#stormboard') format('svg');
+  src:  url('fonts/stormboard.eot?ojxh2w');
+  src:  url('fonts/stormboard.eot?ojxh2w#iefix') format('embedded-opentype'),
+    url('fonts/stormboard.ttf?ojxh2w') format('truetype'),
+    url('fonts/stormboard.woff?ojxh2w') format('woff'),
+    url('fonts/stormboard.svg?ojxh2w#stormboard') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,307 +25,3 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-stormboard-area:before {
-  content: "\e900";
-}
-.icon-stormboard-arraw-offset:before {
-  content: "\e901";
-}
-.icon-stormboard-arrow-clockwise:before {
-  content: "\e902";
-}
-.icon-stormboard-arrow-down-up:before {
-  content: "\e903";
-}
-.icon-stormboard-arrow-left-box:before {
-  content: "\e904";
-}
-.icon-stormboard-arrow-left-circle-fill:before {
-  content: "\e905";
-}
-.icon-stormboard-arrow-open:before {
-  content: "\e906";
-  color: #2f4966;
-}
-.icon-stormboard-arrow-repeat:before {
-  content: "\e907";
-}
-.icon-stormboard-arrow-right-circle-fill:before {
-  content: "\e908";
-}
-.icon-stormboard-arrow-right-thin:before {
-  content: "\e909";
-}
-.icon-stormboard-bounding-box:before {
-  content: "\e90a";
-}
-.icon-stormboard-brightness-high:before {
-  content: "\e90b";
-}
-.icon-stormboard-brightness-high-fill:before {
-  content: "\e90c";
-}
-.icon-stormboard-building:before {
-  content: "\e90d";
-}
-.icon-stormboard-calendar-event:before {
-  content: "\e90e";
-}
-.icon-stormboard-caret-down-fill:before {
-  content: "\e90f";
-}
-.icon-stormboard-category:before {
-  content: "\e910";
-}
-.icon-stormboard-chat-left-text:before {
-  content: "\e911";
-}
-.icon-stormboard-check:before {
-  content: "\e912";
-}
-.icon-stormboard-check-circle-fill:before {
-  content: "\e913";
-}
-.icon-stormboard-circle-drawing:before {
-  content: "\e914";
-  color: #2f4966;
-}
-.icon-stormboard-clock:before {
-  content: "\e915";
-}
-.icon-stormboard-close:before {
-  content: "\e916";
-}
-.icon-stormboard-cloud-haze:before {
-  content: "\e917";
-}
-.icon-stormboard-cloud-lightning-rain:before {
-  content: "\e918";
-}
-.icon-stormboard-cloud-rain-heavy-fill:before {
-  content: "\e919";
-}
-.icon-stormboard-cold-snap:before {
-  content: "\e91a";
-}
-.icon-stormboard-curve-drawing:before {
-  content: "\e91b";
-  color: #2f4966;
-}
-.icon-stormboard-customer-search:before {
-  content: "\e91c";
-}
-.icon-stormboard-delete:before {
-  content: "\e91d";
-}
-.icon-stormboard-drought:before {
-  content: "\e91e";
-}
-.icon-stormboard-envelope:before {
-  content: "\e91f";
-}
-.icon-stormboard-exclamation-circle-fill:before {
-  content: "\e920";
-}
-.icon-stormboard-eye:before {
-  content: "\e921";
-}
-.icon-stormboard-eye-slash:before {
-  content: "\e922";
-}
-.icon-stormboard-file-earmark-text:before {
-  content: "\e923";
-}
-.icon-stormboard-files:before {
-  content: "\e924";
-}
-.icon-stormboard-fire:before {
-  content: "\e925";
-}
-.icon-stormboard-fullscreen:before {
-  content: "\e926";
-}
-.icon-stormboard-geo:before {
-  content: "\e927";
-}
-.icon-stormboard-gust:before {
-  content: "\e928";
-}
-.icon-stormboard-hail-rain:before {
-  content: "\e929";
-}
-.icon-stormboard-heavy-rain:before {
-  content: "\e92a";
-}
-.icon-stormboard-hot-flashes:before {
-  content: "\e92b";
-}
-.icon-stormboard-hotspots:before {
-  content: "\e92c";
-}
-.icon-stormboard-house-door:before {
-  content: "\e92d";
-}
-.icon-stormboard-info-circle:before {
-  content: "\e92e";
-}
-.icon-stormboard-intracloud-lightning:before {
-  content: "\e92f";
-}
-.icon-stormboard-layers:before {
-  content: "\e930";
-}
-.icon-stormboard-lightning:before {
-  content: "\e931";
-}
-.icon-stormboard-lightning-fill:before {
-  content: "\e932";
-}
-.icon-stormboard-map:before {
-  content: "\e933";
-}
-.icon-stormboard-padrao-csv:before {
-  content: "\e934";
-}
-.icon-stormboard-palette-solid:before {
-  content: "\e935";
-}
-.icon-stormboard-paperclip:before {
-  content: "\e936";
-}
-.icon-stormboard-pause-circle-fill:before {
-  content: "\e937";
-}
-.icon-stormboard-pencil:before {
-  content: "\e938";
-}
-.icon-stormboard-pencil-fill:before {
-  content: "\e939";
-}
-.icon-stormboard-pencil-square:before {
-  content: "\e93a";
-}
-.icon-stormboard-people:before {
-  content: "\e93b";
-}
-.icon-stormboard-person:before {
-  content: "\e93c";
-}
-.icon-stormboard-person-fill:before {
-  content: "\e93d";
-}
-.icon-stormboard-person-plus-fill:before {
-  content: "\e93e";
-}
-.icon-stormboard-play-circle-fill:before {
-  content: "\e93f";
-}
-.icon-stormboard-point:before {
-  content: "\e940";
-}
-.icon-stormboard-polygon:before {
-  content: "\e941";
-}
-.icon-stormboard-polygon-drawing:before {
-  content: "\e942";
-  color: #2f4966;
-}
-.icon-stormboard-prec-accum:before {
-  content: "\e943";
-}
-.icon-stormboard-prec-wind:before {
-  content: "\e944";
-}
-.icon-stormboard-radar:before {
-  content: "\e945";
-}
-.icon-stormboard-raindrop:before {
-  content: "\e946";
-}
-.icon-stormboard-rainless:before {
-  content: "\e947";
-}
-.icon-stormboard-report:before {
-  content: "\e948";
-}
-.icon-stormboard-satellite:before {
-  content: "\e949";
-  color: #2f4966;
-}
-.icon-stormboard-screenshot:before {
-  content: "\e94a";
-}
-.icon-stormboard-search:before {
-  content: "\e94b";
-}
-.icon-stormboard-send:before {
-  content: "\e94c";
-}
-.icon-stormboard-snow:before {
-  content: "\e94d";
-}
-.icon-stormboard-snowflake:before {
-  content: "\e94e";
-}
-.icon-stormboard-square-drawing:before {
-  content: "\e94f";
-  color: #2f4966;
-}
-.icon-stormboard-station-data:before {
-  content: "\e950";
-  color: #2f4966;
-}
-.icon-stormboard-stop-circle-fill:before {
-  content: "\e951";
-}
-.icon-stormboard-storm:before {
-  content: "\e952";
-}
-.icon-stormboard-targets:before {
-  content: "\e953";
-}
-.icon-stormboard-thermometer:before {
-  content: "\e954";
-}
-.icon-stormboard-three-dots-vertical:before {
-  content: "\e955";
-}
-.icon-stormboard-thunderstorm:before {
-  content: "\e956";
-}
-.icon-stormboard-transmission-line:before {
-  content: "\e957";
-}
-.icon-stormboard-trash-solid:before {
-  content: "\e958";
-}
-.icon-stormboard-warning:before {
-  content: "\e959";
-}
-.icon-stormboard-warning-diamond:before {
-  content: "\e95a";
-}
-.icon-stormboard-water:before {
-  content: "\e95b";
-}
-.icon-stormboard-whatsapp:before {
-  content: "\e95c";
-}
-.icon-stormboard-wind:before {
-  content: "\e95d";
-}
-.icon-stormboard-windgust:before {
-  content: "\e95e";
-}
-.icon-stormboard-x-circle-fill:before {
-  content: "\e95f";
-}
-.icon-stormboard-x-octagon:before {
-  content: "\e960";
-}
-.icon-stormboard-zoom-in:before {
-  content: "\e961";
-}
-.icon-stormboard-zoom-out:before {
-  content: "\e962";
-}
